--- a/aws/r53.md
+++ b/aws/r53.md
@@ -35,3 +35,16 @@ $# aws route53 list-resource-record-sets --hosted-zone-id ${HOSTED_ZONE_ID} --pr
 aws route53domains transfer-domain-to-another-aws-account --domain-name ${HOSTED_DOMAIN_NAME} --account-id ${OLD_AWS_ACCOUNT_ID} --profile ${profile}
 # 幹@@ 上個禮拜已經重新續約一年了, 所以現在移轉需要再次付費, 不爽轉了.
 ```
+
+
+# note
+
+2020/11/24 已改用 cloudflare 做為 NS, 原始 NS 如下
+
+```
+tonychoucc.com. NS 
+ns-670.awsdns-19.net.
+ns-474.awsdns-59.com.
+ns-1669.awsdns-16.co.uk.
+ns-1080.awsdns-07.org.
+```
