--- a/aws/r53.md
+++ b/aws/r53.md
@@ -48,3 +48,10 @@ ns-474.awsdns-59.com.
 ns-1669.awsdns-16.co.uk.
 ns-1080.awsdns-07.org.
 ```
+
+cloudflare
+
+```
+adrian.ns.cloudflare.com.
+coby.ns.cloudflare.com.
+```
